--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,3 +76,20 @@ services:
     restart: unless-stopped
     depends_on:
       - zookeeper
+
+  # PostgreSQL Service
+  postgres:
+    image: postgres:latest
+    environment:
+      POSTGRES_USER: saim.sualeh
+      POSTGRES_PASSWORD: password1
+      POSTGRES_DB: kafka_optimization
+    ports:
+      - 5432:5432
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+
+volumes:
+  postgres_data:
+    driver: local
