--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
 
   # Kafka node 1
   kafka1:
+    container_name: kafka1
     image: wurstmeister/kafka:latest
     restart: "no"
     links:
@@ -33,6 +34,7 @@ services:
   # Kafka node 2
   kafka2:
     image: wurstmeister/kafka:latest
+    container_name: kafka2
     restart: "no"
     links:
       - zookeeper
@@ -51,6 +53,7 @@ services:
   # Kafka node 3
   kafka3:
     image: wurstmeister/kafka:latest
+    container_name: kafka3
     restart: "no"
     links:
       - zookeeper
